--- a/references.bib
+++ b/references.bib
@@ -784,3 +784,32 @@ PMID: 17989204},
 	url = {https://www.jstor.org/stable/3703220},
 	note = {Publisher: Lippincott Williams \& Wilkins}
 }
+
+@article{peng2006,
+	title = {Model Choice in Time Series Studies of Air Pollution and Mortality},
+	author = {Peng, Roger D. and Dominici, Francesca and Louis, Thomas A.},
+	year = {2006},
+	month = {03},
+	date = {2006-03-01},
+	journal = {Journal of the Royal Statistical Society Series A: Statistics in Society},
+	pages = {179--203},
+	volume = {169},
+	number = {2},
+	doi = {10.1111/j.1467-985X.2006.00410.x},
+	url = {https://doi.org/10.1111/j.1467-985X.2006.00410.x}
+}
+
+@article{touloumi2006,
+	title = {Seasonal confounding in air pollution and health time-series studies: effect on air pollution effect estimates},
+	author = {Touloumi, G. and Samoli, E. and Pipikou, M. and Le Tertre, A. and Atkinson, R. and Katsouyanni, K.},
+	year = {2006},
+	date = {2006},
+	journal = {Statistics in Medicine},
+	pages = {4164--4178},
+	volume = {25},
+	number = {24},
+	doi = {10.1002/sim.2681},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/sim.2681},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/sim.2681},
+	langid = {en}
+}
