clean up computing

--- a/index.tex
+++ b/index.tex
@@ -834,19 +834,19 @@ understand the common practices in the investigated literature.
 
 \section{Results}\label{sec-result}
 
-From the 57 studies examining the effect of particulate matters
+From the 56 studies examining the effect of particulate matters
 (\(\text{PM}_{10}\) and \(\text{PM}_{2.5}\)) on mortality, we focus on
 the baseline model reported in each paper, excluding secondary models
 (e.g.~lag-distributed models) and sensitivity analysis. We also exclude
 decisions on other pollutants, such as nitrogen dioxide
-(\(\text{NO}_2\)). This yields 273 decisions extracted using Gemini,
-averaging approximately 5 decisions per paper. Table~\ref{tbl-review}
+(\(\text{NO}_2\)). This yields 242 decisions extracted using Gemini,
+averaging approximately 4 decisions per paper. Table~\ref{tbl-review}
 summarizes the number of edits made during the review process using the
 Shiny app. {[}details{]}
 
 Table~\ref{tbl-missing-decisions} summarizes the missingness of the
 decisions and reason. While most papers report their decision choices
-(e.g.~use of five degree of freedom), 57\% of decisions lack a stated
+(e.g.~use of five degree of freedom), 55\% of decisions lack a stated
 rationale for the choice. Table~\ref{tbl-most-common-decisions} lists
 teh eight most frequently reported decision: parameter and temporal
 choice for time, PM, temperature, and humidity.
@@ -869,15 +869,15 @@ Count
 \endhead
 \bottomrule\noalign{}
 \endlastfoot
-Recode for secondary LLM processing for standardization & 42 \\
 Irrelevant decisions, e.g.~other pollutants, sensitivity analysis &
-36 \\
-Decision captured not correct & 10 \\
+50 \\
+Recode for secondary LLM processing for standardization & 45 \\
+Decision captured not correct & 11 \\
 Duplicates & 9 \\
 General statements without specific decision, e.g.~minimum of 1 df per
 year was required & 6 \\
 Definition of variables, e.g.~season & 5 \\
-Total & 108 \\
+Total & 126 \\
 
 \end{longtable}
 
@@ -895,8 +895,8 @@ choice (35.5 + 57.1 = 92\%), but 57.1\% lacks a stated reason.}
 \cmidrule(l{3pt}r{3pt}){2-3}
 Reason & Non-missing & Missing\\
 \midrule
-Non-missing & 97 (35.5\%) & 16 (5.9\%)\\
-Missing & 156 (57.1\%) & 4 (1.5\%)\\
+Non-missing & 90 (37.2\%) & 14 (5.8\%)\\
+Missing & 134 (55.4\%) & 4 (1.7\%)\\
 \bottomrule
 \end{tabular}
 
@@ -919,14 +919,14 @@ Variable & Type & Count \\
 \endhead
 \bottomrule\noalign{}
 \endlastfoot
-PM & temporal & 56 \\
-time & parameter & 45 \\
-temperature & parameter & 37 \\
-humidity & parameter & 26 \\
-temperature & temporal & 25 \\
-humidity & temporal & 20 \\
-PM & parameter & 8 \\
-mortality & temporal & 4 \\
+time & parameter & 44 \\
+PM & temporal & 39 \\
+temperature & parameter & 35 \\
+humidity & parameter & 25 \\
+temperature & temporal & 23 \\
+humidity & temporal & 19 \\
+PM & parameter & 9 \\
+time & temporal & 3 \\
 
 \end{longtable}
 
@@ -964,9 +964,9 @@ generally considered up to five days prior (lag 5). {[}TODO: check
 multi-day starts from one{]}.
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.1809}}
-  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.1277}}
-  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.6915}}@{}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.2179}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.1538}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.6282}}@{}}
 
 \caption{\label{tbl-humidity-temperature-decisions}Options captured for
 parameter choices for time, humidity, and temperature variables in the
@@ -992,47 +992,11 @@ Decision
 \endlastfoot
 natural spline & humidity & 3, 4 \\
 natural spline & temperature & 3, 4, 6 \\
-natural spline & time & 1, 3, 4, 6, 7, 8, 12 \\
-smoothing spline & humidity & 2, 3, 4, 6, 8, 50\% of the data \\
-smoothing spline & temperature & 2, 3, 4, 6, 8, 50\% of the data \\
+natural spline & time & 1, 1.5, 3, 4, 6, 7, 8, 12, 15, 30, NA \\
+smoothing spline & humidity & 2, 3, 4, 6, 8, 50 \\
+smoothing spline & temperature & 2, 3, 4, 6, 8, 50 \\
 smoothing spline & time & 1, 3, 4, 5, 6, 7, 7.7, 8, 9, 10, 12, 30, 100,
-NA, 5\% of the data \\
-
-\end{longtable}
-
-\begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.2118}}
-  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.1412}}
-  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.6471}}@{}}
-
-\caption{\label{tbl-temporal-decisions}Options captured for temporal lag
-choices for PM, temperature, and humidity variables in the
-Gemini-extracted decisions. Both single-day lags and multi-day average
-lags are commonly used, generally considering up to five days prior (lag
-5).}
-
-\tabularnewline
-
-\toprule\noalign{}
-\begin{minipage}[b]{\linewidth}\raggedright
-Lag type
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-Variable
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-Decision
-\end{minipage} \\
-\midrule\noalign{}
-\endhead
-\bottomrule\noalign{}
-\endlastfoot
-multi-day average & PM & 0-1, 0-2, 0-3, 0-4, 0-5, 0-7, 1-0, 1-5 \\
-multi-day average & humidity & 0-1, 0-2, 0-3, 0-5, 1-3, 1-5 \\
-multi-day average & temperature & 0-1, 0-2, 0-3, 0-5, 0-7, 1-3 \\
-single-day lag & PM & lag 0, lag 1, lag 2, lag 3, lag 4, lag 5 \\
-single-day lag & humidity & lag 0, lag 1, lag 2, lag 3, lag 4, lag 5,
-lag 6, lag 7 \\
-single-day lag & temperature & lag 0, lag 1, lag 2, lag 3, lag 4, lag
-5 \\
+NA \\
 
 \end{longtable}
 
@@ -1075,7 +1039,7 @@ in ALPHENA.}
 For computing the decision similarity score, we include the first 6 most
 common variable-type decisions as suggested in
 Table~\ref{tbl-most-common-decisions}. Figure~\ref{fig-cluster-paper}
-shows the clustering of the 50 papers based on the decision similarity
+shows the clustering of the 48 papers based on the decision similarity
 scores. The dendrogram is generated using hierarchical clustering, and
 the labels are colored according to the most common smoothing method
 used in each paper. The clustering reveals three distinct groups of
@@ -1265,10 +1229,10 @@ decision level, the BERT model produces the widest variation across all
 five models, while the similarity scores from XLNet are all close to 1.
 These scores are not comparable across models since the difference of
 the underlying transformer architecture. However, the paper similarity
-scores from each model are comparable and \textbf{?@fig-text-mds} shows
-the multi-dimensional scaling (MDS) of the paper similarity scores from
-each text model: all showing a similar clustering pattern of the three
-main smoothing methods.
+scores from each model are comparable and Figure~\ref{fig-text-mds}
+shows the multi-dimensional scaling (MDS) of the paper similarity scores
+from each text model: all showing a similar clustering pattern of the
+three main smoothing methods.
 
 \begin{figure}
 
@@ -1285,6 +1249,22 @@ language model, BERT, produces the widest variation across the five
 models, while the similarity scores form XLNet are all close to 1. The
 model BioBERT, RoBERTa, and SciBERT yield decision similar scores mostly
 between 0.7 to 1.}
+
+\end{figure}%
+
+\begin{figure}
+
+\centering{
+
+\pandocbounded{\includegraphics[keepaspectratio]{index_files/figure-pdf/fig-text-mds-1.pdf}}
+
+}
+
+\caption{\label{fig-text-mds}The multi-dimensional scaling (MDS) of the
+paper similarity scores from each text model: all showing a similar
+clustering pattern of the three main smoothing methods. The points are
+colored by the most common method used in the paper, and the hulls are
+drawn around each method group.}
 
 \end{figure}%
 
@@ -1321,6 +1301,9 @@ for a systematic literature review, it would require substantially more
 training efforts and a labelled decision dataset. We also find sometimes
 the prompt is not fully followed throughout the extraction (example).
 Claude and Gemini\ldots{}
+
+Currently, only one model per paper - some have comparison of GLM and
+GAM, compare different pollutants, stratify by \ldots.
 
 With the advocacy for reproducibility in science, it is expected that
 more papers will share their code and data. The availability of the code
