--- a/index.qmd
+++ b/index.qmd
@@ -83,7 +83,6 @@ library(ggdendro)
 library(patchwork)
 library(text)
 load(here::here("data/text_sensitivity_decision_df.rda"))
-load(here::here("data/text_sensitivity_df.rda"))
 load(here::here("data/llm_temp_df.rda"))
 load(here::here("data/all_geminis.rda"))
 gemini_df <- read_csv(here::here("data/gemini_df.csv")) |> as_decision_tbl()
@@ -262,7 +261,7 @@ From the `r length(unique(gemini_df$paper))` studies examining the effect of par
 #| label: tbl-review
 #| tbl-cap: "tsdjflkajsldf."
 aa_raw <- readLines(here::here("clean-gemini.R"))
-aa <- aa_raw[62:243]
+aa <- aa_raw[35:228]
 res <- purrr::map_dfr(
   as.list(aa),
   ~tibble(origin = .x, 
@@ -344,25 +343,25 @@ var_method_df |>
   knitr::kable(col.names = c("Method", "Variable", "Decision")) 
 ```
 
-```{r}
+```{r eval = FALSE}
 #| label: tbl-temporal-decisions
 #| tbl-cap: "Options captured for temporal lag choices for PM, temperature, and humidity variables in the Gemini-extracted decisions. Both single-day lags and multi-day average lags are commonly used, generally considering up to five days prior (lag 5)."
 temporal_lags <- gemini_df |> 
   filter(type == "temporal") |> 
+  separate_longer_delim(decision, delim = ", ") |> 
   distinct(variable, decision) |>
   arrange(variable, decision) |>
   mutate(decision = as.character(decision)) |> 
   filter(variable %in% c("PM", "temperature", "humidity")) |> 
   mutate(type = ifelse(str_detect(decision, "multi-day"), "multi-day average", "single-day lag"),
          days = ifelse(type == "multi-day average", 
-                       str_remove(decision, "multi-day \\: lag "), 
-                       str_remove(decision, "single-day \\: "))) |>
+                       str_remove(decision, "multi-day lag "), 
+                       str_remove(decision, "single-day lag "))) |>
   group_by(type, variable) |>
-  separate_longer_delim(days, delim = ", ") |> 
   filter(!days %in% c("1-1", "0-0")) |> 
   distinct(variable, type, days) |>
   summarize(decision = paste0(days, collapse = ", ")) |> 
-  ungroup()
+  ungroup() 
 
 temporal_lags |> 
   knitr::kable(col.names = c("Lag type", "Variable", "Decision")) 
@@ -370,7 +369,6 @@ temporal_lags |>
 
 ```{r}
 #count_variable_type(gemini_df)
-gemini_df <- gemini_df |> mutate(reason = str_replace_all(reason, "[^\\x00-\\x7F]", "")) 
 df <- gemini_df |> filter_var_type(n = 6)
 #count_paper_decisions(df) 
 # paper_df <- df |> filter_papers(n_value = 3)
@@ -621,6 +619,24 @@ two domain-trained BERT models:
 
 @fig-text-density presents the distribution of the decision similarity (left) and paper similarity (right) for each text model. At decision level, the BERT model produces the widest variation across all five models, while the similarity scores from XLNet are all close to 1. These scores are not comparable across models since the difference of the underlying transformer architecture. However, the paper similarity scores from each model are comparable and @fig-text-mds shows the multi-dimensional scaling (MDS) of the paper similarity scores from each text model: all showing a similar clustering pattern of the three main smoothing methods.
 
+```{r eval = FALSE}
+t1 <- Sys.time()
+models <- c("bert-base-uncased", "roberta-base", "xlnet-base-cased", 
+           "allenai/scibert_scivocab_uncased", "dmis-lab/biobert-large-cased-v1.1-squad")
+text_sensitivity_decision_df <- map_dfr(models,  ~{
+  print(.x)
+  embed_df <- paper_df |> compute_text_embed(text_model = .x) 
+  distance_decision_df <- calc_decision_similarity(paper_df, embed = embed_df)
+  
+  return(distance_decision_df)
+}, .id = "id") 
+t2 <- Sys.time()
+t2 - t1
+#save(text_sensitivity_decision_df, file = here::here("data/text_sensitivity_decision_df.rda"))
+```
+
+
+
 ```{r}
 #| fig.height: 6
 #| fig.width: 10
@@ -630,7 +646,8 @@ models <- c("bert-base-uncased", "roberta-base", "xlnet-base-cased",
            "allenai/scibert_scivocab_uncased", "dmis-lab/biobert-large-cased-v1.1-squad")
 models_df <- tibble(id = 1:5, models = models, name = c("BERT", "RoBERTa", "XLNet", "SciBERT", "BioBERT"))
 
-p1 <- text_sensitivity_df |> 
+p1 <- text_sensitivity_decision_df |> 
+  mutate(id = as.numeric(id)) |> 
   filter(!str_detect(decision, "method")) |> 
   left_join(models_df) |>
   ggplot(aes(x = dist, fill = name)) + 
@@ -659,18 +676,20 @@ p2 <- text_distance_df |>
   theme(legend.position = 'bottom') 
 ```
 
-```{r eval = FALSE}
+```{r}
 #| fig.height: 6
 #| fig.width: 10
 #| fig.cap: "The multi-dimensional scaling (MDS) of the paper similarity scores from each text model: all showing a similar clustering pattern of the three main smoothing methods. The points are colored by the most common method used in the paper, and the hulls are drawn around each method group."
 #| label: fig-text-mds
+
 mds_df <- text_distance_df |> 
   filter(!paper1 %in% bad & !paper2 %in% bad) |> 
   group_split(id) |> 
   map_dfr(run_mds, .id = "id") |> 
   mutate(id = as.numeric(id)) |> 
   left_join(method_df, by = c("paper" = "paper")) |> 
-  left_join(models_df) 
+  left_join(models_df) |> 
+  mutate(V2 = ifelse(name == "BioBERT", -V2, V2))
 
 mds_df |> ggplot(aes(x = V1, y = V2, gorup = method)) + 
   geom_point(aes(color = method)) +
@@ -689,6 +708,7 @@ The variation in the choice of parameters degree of freedom or knot for smoothin
 
 With LLMs, the extraction of decisions from literature could be largely automated, but manual review is still needed to ensure the quality of the extracted decisions. We also find secondary LLMs can be used to standardize the extracted decisions, such as for temporal lag choices from text expressing this decision in various ways. In this work, we use prompt engineering to optimize the prompt for extracting decisions from general LLMs (Claude and Gemini). Fine-tuning a local model is an alternative approach for a locally-trained model. While it could potentially yield more accurate extraction and hence less manual review, for a systematic literature review, it would require substantially more training efforts and a labelled decision dataset. We also find sometimes the prompt is not fully followed throughout the extraction (example). Claude and Gemini...
 
+Currently, only one model per paper - some have comparison of GLM and GAM, compare different pollutants, stratify by ....
 
 With the advocacy for reproducibility in science, it is expected that more papers will share their code and data. The availability of the code could be a supplementary source for understanding the decisions made in the analysis and cross comparison of the manuscript with the code.  However, given the lack of comments in the current practice, we are not there to extract reasons for the decisions encoded in the script. 
 
